<resources>
    <string name="app_name">StoryTour</string>
    <string name="base_server_url">http://cssgate.insttech.washington.edu/~_450atm15/</string>
    <string name="action_settings">Settings</string>

    <!--For the MainActivity-->
    <string name="title_activity_main">MainActivity</string>
    <string name="button_text_create_a_tour">CREATE A TOUR</string>
    <string name="button_text_view_created_tours">VIEW TOURS CREATED BY YOU</string>
    <string name="button_text_browse_tours">FIND AVAILABLE TOURS</string>
    <string name="button_text_view_tour">VIEW TOUR</string>
    <string name="button_text_view_place">VIEW PLACE</string>

    <!--For the CreateTourActivity-->

    <!--For the CreateTourFragment-->
    <string name="create_tour_form_instructions">Complete all fields to create a new tour:</string>
    <string name="create_tour_form_title_background_text">Title</string>
    <string name="create_tour_form_description_background_text">Description</string>
    <string name="create_tour_form_add_audio_description">Add audio description of tour?</string>
    <string name="create_tour_form_add_image">Add image for the tour cover?</string>
    <string name="create_tour_form_private_or_public">Make tour public?</string>
    <string name="create_tour_button">CREATE TOUR</string>

    <!--For the AddPlaceFragment-->
    <string name="add_place_form_instructions">Complete form to add a new place to your tour:</string>
    <string name="add_place_form_title_background_text">Title</string>
    <string name="add_place_form_description_background_text">Description (optional)</string>
    <string name="add_place_form_instruction_background_text">Instruction (optional)</string>
    <string name="add_place_form_longitude_background_text">Longitude (Ex. -122.310221)</string>
    <string name="add_place_form_latitude_background_text">Latitude (Ex. 47.669874)</string>
    <string name="add_place_form_add_audio_description">Add audio track?</string>
    <string name="add_place_form_add_image">Add image?</string>
    <string name="add_place_button">Add Place</string>
    <string name="add_location_button">Next: Choose Location</string>

    <!--For the AddAudioFragment-->
    <string name="record_audio">Press Record to Begin</string>
    <string name="record_button">Record</string>
    <string name="rerecord_button">Rerecord</string>
    <string name="stop_button">Stop</string>
    <string name="add_audio_button">Add Audio</string>
    <string name="tour_title">PLACEHOLDER</string>
    <string name="tour_description">PLACEHOLDER</string>
    <string name="place_title">PLACEHOLDER</string>
    <string name="place_description">PLACEHOLDER</string>
    <string name="place_location">PLACEHOLDER</string>
    <string name="recording_message">Recording...</string>
    <string name="recording_toast">Start recording...</string>
    <string name="stopped_message">Recording stopped...</string>
    <string name="stopped_toast">Recording stopped...</string>

    <string name="pause_button">PAUSE</string>
    <string name="play_button">PLAY</string>
    <string name="launch_audio_button">LAUNCH AUDIO PLAYER</string>
    <string name="play_audio">Press Record to Begin</string>

    <!--For the AddAudioFragment-->
    <string name="uploading_text">Uploading file to server...</string>

    <!--For the AddImageFragment-->
    <string name="add_image_button">ADD IMAGE</string>

    <!--For the authenticate-->
    <string name="username_hint">Enter your username</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="login_btn">SIGN IN</string>
    <string name="action_logout">LOG OUT</string>
    <string name="LOGIN_PREFS">tcss450.uw.edu.team15project450.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="LOGIN_FILE">tcss450.uw.edu.team15project450.LOGIN_FILE</string>
    <string name="register_txtv">Create an account</string>

    <!--For the Register-->
    <string name="reg_username_hint">Enter username</string>
    <string name="reg_pwd_hint">Enter password</string>
    <string name="reg_name_hint">Enter your name</string>
    <string name="reg_add_user_btn">REGISTER</string>

    <string name="share_email_txt">Share Via Email</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_locations">LocationsActivity</string>

    <string name="add_place_txt">ADD PLACE</string>

</resources>
