<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".creation.AddPlaceFragment">

    <TextView
        android:id="@+id/CreatePlaceInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_place_form_instructions"
        android:textSize="10pt">
    </TextView>

    <EditText
        android:id="@+id/AddPlaceTitle"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/add_place_form_title_background_text">
    </EditText>

    <EditText
        android:id="@+id/AddPlaceDescription"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/add_place_form_description_background_text"
        android:inputType="textMultiLine"
        android:lines="4">
    </EditText>

    <EditText
        android:id="@+id/AddPlaceInstruction"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/add_place_form_instruction_background_text"
        android:inputType="textMultiLine"
        android:lines="2">
    </EditText>

    <EditText
        android:id="@+id/AddPlaceLongitude"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/add_place_form_longitude_background_text">
    </EditText>

    <EditText
        android:id="@+id/AddPlaceLatitude"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/add_place_form_latitude_background_text">
    </EditText>

    <CheckBox
        android:id="@+id/AddAudioPlaceCheckBoxResponse"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/add_place_form_add_audio_description">
    </CheckBox>

    <CheckBox
        android:id="@+id/AddImagePlaceCheckBoxResponse"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/add_place_form_add_image">
    </CheckBox>

    <Button
        android:id="@+id/ButtonAddPlace"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/add_place_button">
    </Button>

</LinearLayout>
