<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tcss450.uw.edu.team15project450.authenticate.RegisterFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_name_hint"
        android:id="@+id/reg_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_username_hint"
        android:id="@+id/reg_username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_pwd_hint"
        android:id="@+id/reg_pwd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/reg_add_user_btn"
        android:onClick="register"
        android:id="@+id/reg_add_user_button" />

</LinearLayout>
