<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".creation.AddAudioFragment">

    <TextView
        android:id="@+id/TourTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tour_title"
        android:textSize="10pt">
    </TextView>

    <TextView
        android:id="@+id/PlaceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_title"
        android:textSize="10pt">
    </TextView>

    <TextView
        android:id="@+id/PlaceDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_description"
        android:textSize="10pt">
    </TextView>

    <TextView
        android:id="@+id/PlaceLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_location"
        android:textSize="10pt">
    </TextView>

    <Button
        android:id="@+id/ButtonAddAudio"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/add_audio_button"
        android:onClick="addAudio">
    </Button>

</LinearLayout>