<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_login"
    android:name="tcss450.uw.edu.team15project450.authenticate.LoginFragment"
    tools:context="tcss450.uw.edu.team15project450.authenticate.LoginFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:layout_gravity="top"
        android:id="@+id/username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_hint"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:id="@+id/pwd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/login_btn"
        android:onClick="login"
        android:id="@+id/signin_button" />

</LinearLayout>
