<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tcss450.uw.edu.team15project450.listen.AudioListenFragment">

    <TextView
        android:id="@+id/play_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_audio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="14pt"/>

    <ImageView
        android:id="@+id/listen_audio_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/play_instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/headphones" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/listen_audio_image"
        android:id="@+id/play_and_pause_buttons"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/play_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/pause_button"
            android:layout_weight="1"
            android:enabled="false"/>
    </LinearLayout>
</RelativeLayout>
